13007
With 2.6.1-final, compiling the following code, while it does contain a
syntax error, does throw a java.util.NoSuchElementException.

{code}
class Ref[T](var r : T)

object Test extends Application {
  val r : Ref[Ref[T forSome { type T ]}] = new Ref(new Ref(new String))
}
{code}

{code}
test.scala:4: error: `=', `>:', or `<:' expected
  val r : Ref[Ref[T forSome { type T ]}] = new Ref(new Ref(new String))
                                     ^
Exception in thread "main" java.util.NoSuchElementException: None.get
        at scala.None$$.get(Option.scala:136)
        at scala.None$$.get(Option.scala:134)
        at scala.tools.nsc.ast.parser.Parsers$$Parser.scala$$tools$$nsc$$ast$$parser$$Parsers$$Parser$$$$p2i(Parsers.scala:115)
        at scala.tools.nsc.ast.parser.Parsers$$Parser$$$$anonfun$$typ$$1.apply(Parsers.scala:725)
        at scala.tools.nsc.ast.parser.Parsers$$Parser$$$$anonfun$$typ$$1.apply(Parsers.scala:720)
        at scala.List.foreach(List.scala:753)
        at scala.tools.nsc.ast.parser.Parsers$$Parser.typ(Parsers.scala:720)
        at scala.tools.nsc.ast.parser.Parsers$$Parser.argType(Parsers.scala:882)
        at scala.tools.nsc.ast.parser.Parsers$$Parser.types(Parsers.scala:665)
        at scala.tools.nsc.ast.parser.Parsers$$Parser.typeArgs(Parsers.scala:843)        at scala.tools.nsc.ast.parser.Parsers$$Parser.annotTypeRest(Parsers.scala:825)
        at scala.tools.nsc.ast.parser.Parsers$$Parser.annotType(Parsers.scala:796)
        at scala.tools.nsc.ast.parser.Parsers$$Parser.infixTypeFirst(Parsers.scala:739)
        at scala.tools.nsc.ast.parser.Parsers$$Parser.infixType(Parsers.scala:736)
        at scala.tools.nsc.ast.parser.Parsers$$Parser.typ(Parsers.scala:711)
        at scala.tools.nsc.ast.parser.Parsers$$Parser.argType(Parsers.scala:882)
        at scala.tools.nsc.ast.parser.Parsers$$Parser.types(Parsers.scala:665)
        at scala.tools.nsc.ast.parser.Parsers$$Parser.typeArgs(Parsers.scala:843)        at scala.tools.nsc.ast.parser.Parsers$$Parser.annotTypeRest(Parsers.scala:825)
        at scala.tools.nsc.ast.parser.Parsers$$Parser.annotType(Parsers.scala:796)
        at scala.tools.nsc.ast.parser.Parsers$$Parser.infixTypeFirst(Parsers.scala:739)
        at scala.tools.nsc.ast.parser.Parsers$$Parser.infixType(Parsers.scala:736)
        at scala.tools.nsc.ast.parser.Parsers$$Parser.typ(Parsers.scala:711)
        at scala.tools.nsc.ast.parser.Parsers$$Parser$$$$anonfun$$typedOpt$$1.apply(Parsers.scala:650)
        at scala.tools.nsc.ast.parser.Parsers$$Parser$$$$anonfun$$typedOpt$$1.apply(Parsers.scala:650)
        at scala.tools.nsc.ast.parser.Parsers$$Parser.placeholderTypeBoundary(Parsers.scala:193)
        at scala.tools.nsc.ast.parser.Parsers$$Parser.typedOpt(Parsers.scala:650)        at scala.tools.nsc.ast.parser.Parsers$$Parser.patDefOrDcl(Parsers.scala:1951)
        at scala.tools.nsc.ast.parser.Parsers$$Parser.defOrDcl(Parsers.scala:1919)
        at scala.tools.nsc.ast.parser.Parsers$$Parser.nonLocalDefOrDcl(Parsers.scala:1935)
        at scala.tools.nsc.ast.parser.Parsers$$Parser$$$$anonfun$$templateStatSeq$$1$$$$anonfun$$apply$$2.apply(Parsers.scala:2398)
        at scala.tools.nsc.ast.parser.Parsers$$Parser$$$$anonfun$$templateStatSeq$$1$$$$anonfun$$apply$$2.apply(Parsers.scala:2398)
        at scala.tools.nsc.ast.parser.Parsers$$Parser.joinComment(Parsers.scala:373)
        at scala.tools.nsc.ast.parser.Parsers$$Parser$$$$anonfun$$templateStatSeq$$1.apply(Parsers.scala:2398)
        at scala.tools.nsc.ast.parser.Parsers$$Parser$$$$anonfun$$templateStatSeq$$1.apply(Parsers.scala:2373)
        at scala.tools.nsc.ast.parser.Parsers$$Parser.checkNoEscapingPlaceholders(Parsers.scala:170)
        at scala.tools.nsc.ast.parser.Parsers$$Parser.templateStatSeq(Parsers.scala:2373)
        at scala.tools.nsc.ast.parser.Parsers$$Parser.templateBody(Parsers.scala:2291)
        at scala.tools.nsc.ast.parser.Parsers$$Parser.templateBodyOpt(Parsers.scala:2299)
        at scala.tools.nsc.ast.parser.Parsers$$Parser.template(Parsers.scala:2255)
        at scala.tools.nsc.ast.parser.Parsers$$Parser.templateOpt(Parsers.scala:2268)
        at scala.tools.nsc.ast.parser.Parsers$$Parser.objectDef(Parsers.scala:2207)
        at scala.tools.nsc.ast.parser.Parsers$$Parser.tmplDef(Parsers.scala:2150)        at scala.tools.nsc.ast.parser.Parsers$$Parser.topLevelTmplDef(Parsers.scala:2133)
        at scala.tools.nsc.ast.parser.Parsers$$Parser$$$$anonfun$$topStatSeq$$1.apply(Parsers.scala:2356)
        at scala.tools.nsc.ast.parser.Parsers$$Parser$$$$anonfun$$topStatSeq$$1.apply(Parsers.scala:2356)
        at scala.tools.nsc.ast.parser.Parsers$$Parser.joinComment(Parsers.scala:373)
        at scala.tools.nsc.ast.parser.Parsers$$Parser.topStatSeq(Parsers.scala:2356)
        at scala.tools.nsc.ast.parser.Parsers$$Parser.compilationUnit(Parsers.scala:2491)
        at scala.tools.nsc.ast.parser.Parsers$$Parser.parse(Parsers.scala:147)
        at scala.tools.nsc.ast.parser.SyntaxAnalyzer$$ParserPhase.apply(SyntaxAnalyzer.scala:21)
        at scala.tools.nsc.Global$$GlobalPhase.applyPhase(Global.scala:245)
        at scala.tools.nsc.Global$$GlobalPhase$$$$anonfun$$run$$1.apply(Global.scala:233)
        at scala.tools.nsc.Global$$GlobalPhase$$$$anonfun$$run$$1.apply(Global.scala:233)
        at scala.Iterator$$class.foreach(Iterator.scala:376)
        at scala.collection.mutable.ListBuffer$$$$anon$$1.foreach(ListBuffer.scala:255)
        at scala.tools.nsc.Global$$GlobalPhase.run(Global.scala:233)
        at scala.tools.nsc.Global$$Run.compileSources(Global.scala:529)
        at scala.tools.nsc.Global$$Run.compile(Global.scala:613)
        at scala.tools.nsc.Main$$.process(Main.scala:86)
        at scala.tools.nsc.Main$$.main(Main.scala:107)
        at scala.tools.nsc.Main.main(Main.scala)
{code}
